--- a/app/src/main/res/layout/dialog_add_user.xml
+++ b/app/src/main/res/layout/dialog_add_user.xml
@@ -1,30 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/white">
 
-    <include layout="@layout/toolbar_confirm"/>
+    <include layout="@layout/toolbar_confirm"
+        android:id="@+id/include" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView" >
+        android:id="@+id/scrollView"
+        android:padding="@dimen/margin_baseX2"
+        android:layout_below="@+id/include"
+        android:background="@color/grey_mdm">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/civProfileImage"
+                android:layout_margin="@dimen/margin_baseX3"
                 android:src="@drawable/ic_add_image_50dp"
                 android:layout_width="@dimen/add_image_size"
                 android:layout_height="@dimen/add_image_size" />
 
-        </LinearLayout>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fn_editText"
+                android:hint="First Name"
+                android:background="@color/transparent"
+                android:padding="@dimen/margin_baseX2"
+                android:drawableLeft="@drawable/ic_account_circle"
+                android:drawableStart="@drawable/ic_account_circle"
+                android:drawablePadding="@dimen/margin_baseX2"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_s"
+                android:layout_below="@+id/civProfileImage"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ln_editText"
+                android:hint="Last Name"
+                android:background="@color/transparent"
+                android:padding="@dimen/margin_baseX2"
+                android:drawableLeft="@drawable/ic_group"
+                android:drawableStart="@drawable/ic_group"
+                android:drawablePadding="@dimen/margin_baseX2"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_s"
+                android:layout_below="@+id/fn_editText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/age_editText"
+                android:hint="Age"
+                android:background="@color/transparent"
+                android:padding="@dimen/margin_baseX2"
+                android:drawableLeft="@drawable/ic_account_circle"
+                android:drawableStart="@drawable/ic_account_circle"
+                android:drawablePadding="@dimen/margin_baseX2"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_s"
+                android:layout_below="@+id/ln_editText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/city_editText"
+                android:hint="City"
+                android:background="@color/transparent"
+                android:padding="@dimen/margin_baseX2"
+                android:drawableLeft="@drawable/ic_account_circle"
+                android:drawableStart="@drawable/ic_account_circle"
+                android:drawablePadding="@dimen/margin_baseX2"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_s"
+                android:layout_below="@+id/age_editText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+        </RelativeLayout>
     </ScrollView>
 
 
-</LinearLayout>
+</RelativeLayout>
