current user with session

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".main.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".main.MainActivity">
 
-    <item android:id="@+id/action_more"
+    <group android:id="@+id/action_more"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_more_vert_white_24dp"
         android:orderInCategory="10"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always">
+
+        <item android:id="@+id/action_profile"
+            android:title="@string/action_profile"
+            android:orderInCategory="1"
+            app:showAsAction="never"/>
+
+        <item android:id="@+id/action_logout"
+            android:title="@string/action_logout"
+            android:orderInCategory="10"
+            app:showAsAction="never"/>
+
+    </group>
 
     <item android:id="@+id/action_add"
         android:title="@string/gen_add"
