--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,6 +9,7 @@
         android:id="@+id/mToolbar"
         android:minHeight="?attr/actionBarSize"
         android:background="@color/blue_toolbar"
+        app:theme="@style/ToolbarColorsTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </android.support.v7.widget.Toolbar>
