--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,5 +38,8 @@
     <dimen name="main_listview_divider_height">50dp</dimen>
     <dimen name="circular_images_size">50dp</dimen>
     <dimen name="add_image_size">80dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
