--- a/app/src/main/res/drawable/user_item_bg.xml
+++ b/app/src/main/res/drawable/user_item_bg.xml
@@ -6,6 +6,6 @@
 
     <corners android:radius="5dp"/>
 
-    <solid android:color="@color/yellow_light"/>
+    <solid android:color="@color/white"/>
 
 </shape>
