--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -57,9 +57,9 @@
             android:gravity="top|start">
 
             <TextView
+                android:id="@+id/city_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/home_textView"
                 android:textColor="@color/black_text"
                 android:textSize="@dimen/text_size_m"
                 android:drawableLeft="@drawable/ic_home_black"
@@ -69,9 +69,9 @@
                 android:layout_marginTop="10dp" />
 
             <TextView
+                android:id="@+id/phone_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/phone_textView"
                 android:textColor="@color/black_text"
                 android:textSize="@dimen/text_size_m"
                 android:drawableLeft="@drawable/ic_phone"
@@ -81,10 +81,34 @@
                 android:layout_marginTop="10dp" />
 
             <TextView
+                android:id="@+id/email_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_m"
+                android:drawableLeft="@drawable/ic_email"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="5dp"
+                android:typeface="serif"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/salary_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_text"
+                android:textSize="@dimen/text_size_m"
+                android:drawableLeft="@drawable/ic_salary"
+                android:drawableStart="@drawable/ic_salary"
+                android:drawablePadding="5dp"
+                android:typeface="serif"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/show_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/gen_show"
-                android:id="@+id/show_textView"
                 android:gravity="center|end"
                 android:textColor="@color/blue_primary_dark"
                 android:padding="10dp" />
